# ppmViewer

./: .gitignore  CMakeLists.txt  README.md
img/: sampleImage.ppm
src/: main.cpp
